src/test/ui/loops/loop-labeled-break-value.stderr
error[E0308]: mismatched types
  --> $DIR/loop-labeled-break-value.rs:3:29
   |
LL |         let _: i32 = loop { break };
   |                             ^^^^^
   |                             |
   |                             expected i32, found ()
   |                             help: give it a value of the expected type: `break 42`
   |
   = note: expected type `i32`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/loop-labeled-break-value.rs:6:37
   |
LL |         let _: i32 = 'inner: loop { break 'inner };
   |                                     ^^^^^^^^^^^^
   |                                     |
   |                                     expected i32, found ()
   |                                     help: give it a value of the expected type: `break 'inner 42`
   |
   = note: expected type `i32`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/loop-labeled-break-value.rs:9:45
   |
LL |         let _: i32 = 'inner2: loop { loop { break 'inner2 } };
   |                                             ^^^^^^^^^^^^^
   |                                             |
   |                                             expected i32, found ()
   |                                             help: give it a value of the expected type: `break 'inner2 42`
   |
   = note: expected type `i32`
              found type `()`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
